# strava-rs

./: .env  .gitignore  CHANGELOG.md  Cargo.lock.back  Cargo.toml  Makefile  README.md  design.md  diesel.toml  flake.nix
.github/workflows/: release.yml  rust.yml
.sqlx/: query-0658d594d38650d0aabc0e522a7c386589009c9cd07cfc42453f91728a4c1abc.json  query-1a6be808e4ef23cbef0e25be102eea922f783b1e04ce83492c0116dbd1381c44.json  query-7637ba5e32abcc508a764191c104b53a0c98a4ed5662de3e3a9840a649e86017.json  query-83581c9fe3c082bb1c13d410e5bafeec5262825b6faa8594376939acd9a95b3f.json  query-8386d166f302d487c4f9fed7ca12221927d76c962c179a01b56fcdb7cf5cbe1c.json  query-9c438fb8bd6964b8ebf7db880eaa50abf1304fadfa757d89f1870f55da37200a.json  query-a98401502878315ec3145f66e7378c5a2ada1a7a3195be75ba271f108d126efa.json  query-b1777053c7f35e506713dfa51b4a47d21889b03be958c7644facfedc1ac60cc2.json  query-b77f655ac5297b989ca61d95077e4e0134646ea94c4e7c345d8a4b9897ce3454.json
.sqlxb/: query-578b0263964610d68dda1948116beff1130a3cc57033f3c7b6c7c13e52481c01.json  query-882053a4b7da53c7c67e8c9ff0a210211bf7b04194f346ca48a4b13a0bff6b4e.json  query-a98401502878315ec3145f66e7378c5a2ada1a7a3195be75ba271f108d126efa.json
migrations/: 20230604204101_initial.down.sql  20230604204101_initial.up.sql  20241123000000_segements.down.sql  20241123000000_segment.up.sql
migrations/2023-06-04-204101_create_activities/: down.sql  up.sql
src/: app.rs  main.rs  ui.rs
src/authenticator/: access_token_fetcher.rs  auth_code_fetcher.rs  mod.js  mod.rs  token_fetch.rs  token_store.rs
src/client/: mod.rs
src/component/: activity_list.rs  activity_performances.rs  activity_segments.rs  activity_view.rs  app.rs  calendar_view.rs  layout.rs  log_view.rs  mod.rs  polyline.rs  race_predictor.rs  segments.rs  splits.rs  stats.rs  unit_formatter.rs
src/component/activity_list/: activity_chart.rs  activity_dialog.rs  activity_list.rs  chart.rs  dialog.rs  list.rs  mod.rs  rank_dialog.rs  sort_dialog.rs
src/config/: keymap.rs  mod.rs
src/event/: input.rs  keymap.rs  logger.rs  mod.rs  util.rs
src/expr/: evaluator.rs  lexer.rs  mod.rs  parser.rs
src/filter/: evaluator.rs  lexer.rs  mod.rs  parser.rs
src/input/: mod.rs
src/store/: activity.rs  db.rs  migration.rs  mod.rs  polyline_compare.rs  schema.rs
src/sync/: convert.rs  ingest.rs  ingest_activities.rs  ingest_activity.rs  logger.rs  mod.rs
src/ui/: activity_list.rs  app.rs  color.rs  event.rs  layout.rs  mod.rs  unit_formatter.rs
src/util/: geotool.rs  mod.rs  time_format.rs
