[package]
name = "strava-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
crossterm = "0.26.1"
env_logger = "0.10.0"
futures-util = "0.3.25"
hyper = { version = "0.14.23", features = ["client", "full"] }
hyper-tls = "0.5.0"
log = "0.4.17"
open = "3.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
termion = "2.0.1"
tokio = { version = "1.24.2", features = ["full"] }
tui = "0.19.0"
url = "2.3.1"
xdg = "2.4.1"
